--- a/customer-page.html
+++ b/customer-page.html
@@ -1,157 +1,159 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Business promotion</title>
-</head>
-<body>
-  <header>
-    <a>Product</a>
-    <nav>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Business promotion</title>
+  </head>
+  <body>
+    <header>
+      <a>Product</a>
+      <nav>
+        <ul>
+          <li><a href=".">Product</a></li>
+          <li><a href=".">Customers</a></li>
+          <li><a href=".">Pricing</a></li>
+          <li><a href=".">Resources</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href=".">Product</a></li>
-        <li><a href=".">Customers</a></li>
-        <li><a href=".">Pricing</a></li>
-        <li><a href=".">Resources</a></li>
+        <li><button type="button">Sign In</button></li>
+        <li><button type="button">Sign Up</button></li>
       </ul>
-    </nav>
-    <ul>
-      <li><button type="button">Sign In</button></li>
-      <li><button type="button">Sign Up</button></li>
-    </ul>
-  </header>
-  <main>
-    <section class="clients-section">
-      <h2 class="clients-header">Our Clients</h2>
-    </section>
-    <section class="advantages-section">
-      <h2>Why Choose Product?</h2>
-      <ul class="advantages-list">
-        <li class="advantages-item">
-          <p class="advantages-header">Special Business</p>
-          <p class="advantages-text">
-            Product helps you see how many more days you need to work to reach
-            your financial goal for the month and year.
-          </p>
+    </header>
+    <main>
+      <section class="clients-section">
+        <h2 class="clients-header">Our Clients</h2>
+      </section>
+      <section class="advantages-section">
+        <h2>Why Choose Product?</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <p class="advantages-header">Special Business</p>
+            <p class="advantages-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li class="advantages-item">
+            <p class="advantages-header">Instant Result</p>
+            <p class="advantages-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li class="advantages-item">
+            <p class="advantages-header">Fastest way to organize</p>
+            <p class="advantages-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="product-section">
+        <h2>How Product Work?</h2>
+        <ul class="product-list">
+          <li class="product-item">
+            <img src="" alt="" class="product-image" />
+            <p class="product-step">Step 1</p>
+            <p class="product-header">Apply for a product</p>
+            <p class="product-text">
+              Completing our easy step-by-step application form gives you access
+              to multiple business with multiple products. We analyse your
+              business through our proprietary credit analysis technology
+            </p>
+          </li>
+          <li class="product-item">
+            <img src="" alt="" class="product-image" />
+            <p class="product-step">Step 2</p>
+            <p class="product-header">Pay fully refundable</p>
+            <p class="product-text">
+              Product will contactting you instantly to receive payment of the
+              Application Fee. if no offer of product is available, your fee
+              will be fully refunded.
+            </p>
+          </li>
+          <li class="product-item">
+            <img src="" alt="" class="product-image" />
+            <p class="product-step">Step 3</p>
+            <p class="product-header">Completion</p>
+            <p class="product-text">
+              Product will continue to liase between borrower and manager to
+              procees and complete a quick and efficient settlement
+            </p>
+          </li>
+        </ul>
+        <button type="button">Get in touch with us</button>
+      </section>
+      <section class="join-section">
+        <h2 class="join-header">
+          Join thousand of other who have already received offers
+        </h2>
+        <ul class="join-list">
+          <li class="join-item">
+            <p class="item-header">Business</p>
+            <ul class="itesm-list">
+              <li class="item-list">Cash Flow</li>
+              <li class="item-list">Asset Backed</li>
+              <li class="item-list">Receivables Finance</li>
+            </ul>
+          </li>
+          <li class="join-item">
+            <p class="item-header">Enterprise</p>
+            <ul class="itesm-list">
+              <li class="item-list">Site Acquisition</li>
+              <li class="item-list">Bridge</li>
+              <li class="item-list">Development Financing</li>
+            </ul>
+          </li>
+        </ul>
+        <p class="item-subheader">Find the best business product</p>
+        <p class="item-subheader">Find the best business product</p>
+      </section>
+      <section class="call-to-action-section">
+        <h2 class="call-to-action-title">
+          Join 100 Compannies who boost their business with Product
+        </h2>
+        <button class="call-to-action-btn">Get This</button>
+      </section>
+    </main>
+    <footer>
+      <a href=".">Product</a>
+      <ul>
+        <li><a href=".">Instagram</a></li>
+        <li><a href=".">Facebook</a></li>
+        <li><a href=".">Twitter</a></li>
+      </ul>
+      <p>Resource</p>
+      <ul class="resource-list">
+        <li class="resource-item">
+          <a href="." class="resource-link">Aboout Us</a>
         </li>
-        <li class="advantages-item">
-          <p class="advantages-header">Instant Result</p>
-          <p class="advantages-text">
-            Product helps you see how many more days you need to work to reach
-            your financial goal for the month and year.
-          </p>
+        <li class="resource-item">
+          <a href="." class="resource-link">Blog</a>
         </li>
-        <li class="advantages-item">
-          <p class="advantages-header">Fastest way to organize</p>
-          <p class="advantages-text">
-            Product helps you see how many more days you need to work to reach
-            your financial goal for the month and year.
-          </p>
+        <li class="resource-item">
+          <a href="." class="resource-link">Contact</a>
+        </li>
+        <li class="resource-item"><a href="." class="resource-link">FAQ</a></li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul class="legal-list">
+        <li class="legal-item">
+          <a href="." class="legal-link">Disclaimer</a>
+        </li>
+        <li class="legal-item"><a href="." class="legal-link">Financing</a></li>
+        <li class="legal-item">
+          <a href="." class="legal-link">Privacy Policy</a>
+        </li>
+        <li class="legal-item">
+          <a href="." class="legal-link">Terms of Service</a>
         </li>
       </ul>
-    </section>
-    <section class="product-section">
-      <h2>How Product Work?</h2>
-      <ul class="product-list">
-        <li class="product-item">
-          <img src="" alt="" class="product-image" />
-          <p class="product-step">Step 1</p>
-          <p class="product-header">Apply for a product</p>
-          <p class="product-text">
-            Completing our easy step-by-step application form gives you access
-            to multiple business with multiple products. We analyse your
-            business through our proprietary credit analysis technology
-          </p>
-        </li>
-        <li class="product-item">
-          <img src="" alt="" class="product-image" />
-          <p class="product-step">Step 2</p>
-          <p class="product-header">Pay fully refundable</p>
-          <p class="product-text">
-            Product will contactting you instantly to receive payment of the
-            Application Fee. if no offer of product is available, your fee will
-            be fully refunded.
-          </p>
-        </li>
-        <li class="product-item">
-          <img src="" alt="" class="product-image" />
-          <p class="product-step">Step 3</p>
-          <p class="product-header">Completion</p>
-          <p class="product-text">
-            Product will continue to liase between borrower and manager to
-            procees and complete a quick and efficient settlement
-          </p>
-        </li>
-      </ul>
-      <button type="button">Get in touch with us</button>
-    </section>
-    <section class="join-section">
-      <h2 class="join-header">
-        Join thousand of other who have already received offers
-      </h2>
-      <ul class="join-list">
-        <li class="join-item">
-          <p class="item-header">Business</p>
-          <ul class="itesm-list">
-            <li class="item-list">Cash Flow</li>
-            <li class="item-list">Asset Backed</li>
-            <li class="item-list">Receivables Finance</li>
-          </ul>
-        </li>
-        <li class="join-item">
-          <p class="item-header">Enterprise</p>
-          <ul class="itesm-list">
-            <li class="item-list">Site Acquisition</li>
-            <li class="item-list">Bridge</li>
-            <li class="item-list">Development Financing</li>
-          </ul>
-        </li>
-      </ul>
-      <p class="item-subheader">Find the best business product</p>
-      <p class="item-subheader">Find the best business product</p>
-    </section>
-    <section class="call-to-action-section">
-      <h2 class="call-to-action-title">
-        Join 100 Compannies who boost their business with Product
-      </h2>
-      <button class="call-to-action-btn">Get This</button>
-    </section>
-  </main>
-  <footer>
-    <a href=".">Product</a>
-    <ul>
-      <li><a href=".">Instagram</a></li>
-      <li><a href=".">Facebook</a></li>
-      <li><a href=".">Twitter</a></li>
-    </ul>
-    <p>Resource</p>
-    <ul class="resource-list">
-      <li class="resource-item">
-        <a href="." class="resource-link">Aboout Us</a>
-      </li>
-      <li class="resource-item">
-        <a href="." class="resource-link">Blog</a>
-      </li>
-      <li class="resource-item">
-        <a href="." class="resource-link">Contact</a>
-      </li>
-      <li class="resource-item"><a href="." class="resource-link">FAQ</a></li>
-    </ul>
-    <p>Legal Stuff</p>
-    <ul class="legal-list">
-      <li class="legal-item">
-        <a href="." class="legal-link">Disclaimer</a>
-      </li>
-      <li class="legal-item"><a href="." class="legal-link">Financing</a></li>
-      <li class="legal-item">
-        <a href="." class="legal-link">Privacy Policy</a>
-      </li>
-      <li class="legal-item">
-        <a href="." class="legal-link">Terms of Service</a>
-      </li>
-    </ul>
-    <p>knowing you're always on the best energy deal.</p>
-    <button type="button" class="sign-up-btn">Sign Up Now</button>
-  </footer>
-</body>
+      <p>knowing you're always on the best energy deal.</p>
+      <button type="button" class="sign-up-btn">Sign Up Now</button>
+    </footer>
+  </body>
+</html>
